--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,5 +13,5 @@
   position: relative;
   justify-content: center;
   flex: 1;
-  width: 100vw;
+  width: 100%;
 }
