--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,9 +34,6 @@
 }
 
 @media screen and (max-width: 450px) {
-  /* .header {
-width: 100vw;
-    } */
   .header__title {
     font-size: 40px;
   }
@@ -48,10 +45,10 @@ width: 100vw;
 
 @media screen and (max-width: 400px) {
   .header__title {
-    font-size: 30px;
+    font-size: 25px;
   }
   .header__sub-title {
     margin: 0px auto 10px;
-    font-size: 20px;
+    font-size: 15px;
   }
 }
