--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 800px) {
   .home {
-    width: 100vw;
+    width: 100%;
     height: 700px;
     flex-direction: column;
     gap: 20px;
